hasqd/tests/coptest/usr/ab/hsl/neg/fid_hsl_ag_cf.inp
agent config
agent cf a
agent cf database "a" "b"
agent cf logfile "a" "b"
agent cf logcomm "a" "b"
agent cf wp "a" "b"

quit
